--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,5 +1,6 @@
 .App {
-  text-align: center;
+  /*text-align: center;*/
+  margin:0 2%;
 }
 
 .App-logo {
@@ -21,4 +22,8 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.border-color-red{
+  border-color: red;
 }
